# rheo

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  Makefile  README.md  justfile
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/rheo/: Common.h
include/rheo/AST/: AST.h  Print.h
include/rheo/Diagnostics/: DiagnosticEngine.h  Diagnostics.h  SourceLocation.h  SourceManager.h  Span.h
include/rheo/Frontend/: AST.h  Lexer.h  Parser.h  Token.h
include/rheo/Sema/: NameResolver.h  ResolvedAST.h  ResolvedASTPrinter.h  Symbol.h
source/: main.cpp
source/Diagnostics/: Diagnostics.cpp  SourceManager.cpp
source/Frontend/: Lexer.cpp  Parser.cpp
source/Sema/: NameResolver.cpp
source/diagnostics/: SourceManager.cpp  SourceManager.h
test/: CMakeLists.txt
test/source/: rheo_test.cpp
